Fix color for search button and re-align buttons in admin posts list page

--- a/app/assets/stylesheets/simple_bootstrap.scss
+++ b/app/assets/stylesheets/simple_bootstrap.scss
@@ -3024,14 +3024,14 @@ textarea.form-control-lg {
 }
 
 .btn-secondary {
-  color: #fff;
-  background-color: #6c757d;
-  border-color: #6c757d;
+  color: #3B5BDB;
+  background-color: #E8EDFF;
+  border-color: #eca1a6;
 }
 .btn-secondary:hover {
   color: #fff;
-  background-color: #5c636a;
-  border-color: #565e64;
+  background-color: #DDE4FF;
+  border-color: #eca1a6;
 }
 .btn-check:focus + .btn-secondary, .btn-secondary:focus {
   color: #fff;
